--- a/my-turborepo/apps/agent-backend/package.json
+++ b/my-turborepo/apps/agent-backend/package.json
@@ -1,10 +1,9 @@
 {
   "name": "agent-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
